--- a/Pagina web/index.html
+++ b/Pagina web/index.html
@@ -5,9 +5,27 @@
     <meta charset="utf-8" />
     <title>Home | Massfitness</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
   </head>
 
   <body>
+
+    <nav class="responsive">
+      <input type="checkbox" id="check">
+      <label for="check" class="checkbtn">
+        <i class="fas fa-bars"></i>
+      </label>
+      <a href="#" class="responsivelink">
+        <img src="logo.png" alt="" class="logo">
+      </a>
+      <ul class="ul">
+        <li class="li_enlaces2"><a class="enlaces2" href="#">Home</a></li>
+        <li class="li_enlaces2"><a class="enlaces2" href="#">Sobre</a></li>
+        <li class="li_enlaces2"><a class="enlaces2" href="#">Clases</a></li>
+        <li class="li_enlaces2"><a class="enlaces2" href="#">Planes</a></li>
+        <li class="li_enlaces2"><a class="enlaces2" href="#">Contacto</a></li>
+      </ul>
+    </nav>
 
     <nav class="topheader">
       <ul>
@@ -56,6 +74,8 @@
 
       </section>
       
+
+
       <aside class="aside">
         <b><p class="clasestitulo">Nuestras Clases</p></b>
         <hr>
