--- a/Pagina web/index.html
+++ b/Pagina web/index.html
@@ -7,27 +7,20 @@
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
   </head>
-
+  
   <body>
 
-    <nav class="responsive">
+    <nav class="topheader">
+
       <input type="checkbox" id="check">
       <label for="check" class="checkbtn">
-        <i class="fas fa-bars"></i>
+        
+      <i class="fas fa-bars"></i>
       </label>
       <a href="#" class="responsivelink">
-        <img src="logo.png" alt="" class="logo">
+        <img src="a.png" alt="" class="logo">
       </a>
-      <ul class="ul">
-        <li class="li_enlaces2"><a class="enlaces2" href="#">Home</a></li>
-        <li class="li_enlaces2"><a class="enlaces2" href="#">Sobre</a></li>
-        <li class="li_enlaces2"><a class="enlaces2" href="#">Clases</a></li>
-        <li class="li_enlaces2"><a class="enlaces2" href="#">Planes</a></li>
-        <li class="li_enlaces2"><a class="enlaces2" href="#">Contacto</a></li>
-      </ul>
-    </nav>
 
-    <nav class="topheader">
       <ul>
         <li class="li_enlaces"><a class="enlaces" href = "index.html">Home</a></li>
         <li class="li_enlaces"><a class="enlaces" href = "sobre.html">Sobre</a></li>
