--- a/Pagina web/sobre.html
+++ b/Pagina web/sobre.html
@@ -3,20 +3,32 @@
 
   <head>
     <meta charset="utf-8" />
-    <title>Home | Massfitness</title>
+    <title>Sobre | Massfitness</title>
     <link rel="stylesheet" href="estilos2.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
   </head>
 
   <body>
 
     <nav class="topheader">
-      <ul>
+
+      <input type="checkbox" id="check">
+      <a href=https://twitter.com/massfitness><img src="images/twitter.png" class="twitter2" width = 50 height = 25 /></a>
+      <a href=https://es-es.facebook.com/massfitness><img src="images/facebook.png" class="facebook2" width = 25 height = 25 /></a>
+      <label for="check" class="checkbtn">
+      <i class="fas fa-bars"></i>
+      </label>
+      <a href="#" class="responsivelink">
+        <img src="a.png" alt="" class="logo">
+      </a>
+
+      <ul class="ul_general">
         <li class="li_enlaces"><a class="enlaces" href = "index.html">Home</a></li>
         <li class="li_enlaces"><a class="enlaces" href = "sobre.html">Sobre</a></li>
           
           <li class="li_topheader"><a class="enlaces" href = "clases.html">Clases</a>
 
-            <ul class="ul_topheader">
+            <ul class="ul_desplegable">
               <li class="li_desplegable"><a class="desplegable" href = "clases.html">Base HIIT</a></li>
               <li class="li_desplegable"><a class="desplegable" href = "clases.html">Base Strenght</a></li>
               <li class="li_desplegable"><a class="desplegable" href = "clases.html">Base Endurance</a></li>
