--- a/Pagina web/index.html
+++ b/Pagina web/index.html
@@ -13,9 +13,14 @@
     <nav class="topheader">
 
       <input type="checkbox" id="check">
+
+      <li class = "twitter"><a href=https://twitter.com/massfitness><img src="images/twitter.png" width = 50 height = 25 /></a></li>
+      <li class = "facebook"><a href=https://es-es.facebook.com/massfitness><img src="images/facebook.png" width = 25 height = 25 /></a></li>
+      
       <label for="check" class="checkbtn">
       <i class="fas fa-bars"></i>
       </label>
+
       <a href="#" class="responsivelink">
         <img src="a.png" alt="" class="logo">
       </a>
