--- a/freshIdeas/index.html
+++ b/freshIdeas/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8" />
     <title>Home | 2cShop</title>
     <link rel="stylesheet" href="estilos.css">
-    <h1 class = "title"><b>2cShop</b></h1>
   </head>
 
   <body>
@@ -15,11 +14,11 @@
     <nav class="topheader">
       <ul>
         <li class="listenlaces"><a class="enlaces" href = ""><b>Home</b></a></li>
-        <li class="listenlaces"><a class="enlaces" href = ""><b>About</b></a></li>
-        <li class="listenlaces"><a class="enlaces" href = ""><b>Products</b></a></li>
-        <li class="listenlaces"><a class="enlaces" href = ""><b>Contacto</b></a></li>
-        <li class="listenlaces"><a class="enlaces" href = ""><b>Support</b></a></li>
-        <li class="listenlaces"><a class="enlaces" href = ""><b>View Cart</b></a></li>
+        <li class="listenlaces"><a class="enlaces" href = ""><b>About Us</b></a></li>
+        <li class="listenlaces"><a class="enlaces" href = ""><b>Services</b></a></li>
+        <li class="listenlaces"><a class="enlaces" href = ""><b>Porfolio</b></a></li>
+        <li class="listenlaces"><a class="enlaces" href = ""><b>News</b></a></li>
+        <li class="listenlaces"><a class="enlaces" href = ""><b>Contact</b></a></li>
       </ul>
     </nav>
 
