--- a/freshIdeas/index.html
+++ b/freshIdeas/index.html
@@ -18,7 +18,7 @@
         <li class="listenlaces"><a class="enlaces" href = ""><b>Services</b></a></li>
         <li class="listenlaces"><a class="enlaces" href = ""><b>Porfolio</b></a></li>
         <li class="listenlaces"><a class="enlaces" href = ""><b>News</b></a></li>
-        <li class="listenlaces"><a class="enlaces" href = ""><b>Contact</b></a></li>
+        <li class="listenlaces"><a class="enlaces" href = ""><b>Contact</b></a></li></ul>
       </ul>
     </nav>
 
@@ -52,66 +52,28 @@
 
           <ul class="ul_categorias">
             <li><a class="secciones">T-Shirts</a></li>
-            <hr class="hr_secciones"><br>
+            <br>
             <li><a class="secciones">Tanks</a></li>
-            <hr class="hr_secciones"><br>
+            <br>
             <li><a class="secciones">Dress Shirts</a></li>
-            <hr class="hr_secciones"><br>
+            <br>
             <li><a class="secciones">Sweaters</a></li>
-            <hr class="hr_secciones"><br>
+            <br>
             <li><a class="secciones">Swimwear</a></li>
-            <hr class="hr_secciones"><br>
+            <br>
             <li><a class="secciones">Active Wear</a></li>
-            <hr class="hr_secciones"><br>
+            <br>
             <li><a class="secciones">Work Wear</a></li>
-            <hr class="hr_secciones"><br>
+            <br>
             <li><a class="secciones">Jeans</a></li>
-            <hr class="hr_secciones"><br>
+            <br>
             <li><a class="secciones">Shoes</a></li>
-            <hr class="hr_secciones"><br>
+            <br>
             <li><a class="secciones">Accesories</a></li>
-            <hr class="hr_secciones"><br>
+            <br>
           </ul>
 
         </aside>
-
-<!-- ASIDE CATEGORIA 2 -->
-
-        <aside class="categorias">
-
-          <ul>
-            <li class="list_h4"><h4 class="h4_categorias">Shop by category</h4><br></li>
-          </ul>
-
-          <ul class="ul_categorias">
-            <li><a class="secciones">Twitter</a></li>
-            <hr class="hr_secciones"><br>
-            <li><a class="secciones">Facebook</a></li>
-            <hr class="hr_secciones"><br>
-            <li><a class="secciones">Google Buzz</a></li>
-            <hr class="hr_secciones"><br>
-          </ul>
-
-        </aside>
-
-<!-- ASIDE CATEGORIA 3 -->
-
-        <aside class="categorias">
-
-          <ul>
-            <li class="list_h4"><h4 class="h4_categorias">Recent Articles</h4><br></li>
-          </ul>
-
-          <ul class="ul_categorias">
-            <li><a class="secciones">How to ensure the best fit</a></li>
-            <hr class="hr_secciones"><br>
-            <li><a class="secciones">This year's hot colors</a></li>
-            <hr class="hr_secciones"><br>
-          </ul>
-
-        </aside>
-
-      </aside>
 
 <!-- SECTION CAMISETAS PRINCIPAL -->
 
