--- a/freshIdeas/index.html
+++ b/freshIdeas/index.html
@@ -12,7 +12,10 @@
 <!--MENU TOPHEADER -->
 
     <nav class="topheader">
-      <ul>
+
+      <img class="logo" src="images/logo.png">
+
+      <ul class="ul_enlaces">
         <li class="listenlaces"><a class="enlaces" href = ""><b>Home</b></a></li>
         <li class="listenlaces"><a class="enlaces" href = ""><b>About Us</b></a></li>
         <li class="listenlaces"><a class="enlaces" href = ""><b>Services</b></a></li>
@@ -40,11 +43,9 @@
 
 <!-- BARRA LATERAL -->
 
-      <aside id="barralateral">
+      <aside class = "barralateral">
 
 <!-- ASIDE CATEGORIA 1 -->
-
-        <aside class="categorias">
           
           <ul>
             <li class="list_h4"><h4 class="h4_categorias">Shop by category</h4><br></li>
@@ -79,68 +80,6 @@
 
       <section class="principal">
 
-        <b><h3 class="h3_principal">Featured Tees >> The Season's Hottest</h3></b>
-
-<!-- SECTION CAMISETAS BLOQUE 1 -->
-
-        <section class="camisetasbloque">
-
-          <section class="camisetas">
-            <ul class="bordeimg">
-              <img class="images" src="images/hotPink.png">
-              <li>
-                <a class="textimg" href="">Hot pink Pocket Tee</a>
-                <p>$4.99</p>
-                <p>Sizes: S/M/L/XL/XXL</p>
-              </li>
-              <img class="buynow" src="images/buyNow.png">
-            </ul>
-          </section>
-
-          <section class="camisetas">
-            <ul class="bordeimg">
-              <img class="images" src="images/purple.png">
-              <li>
-                <a class="textimg" href="">Hot pink Pocket Tee</a>
-                <p>$4.99</p>
-                <p>Sizes: S/M/L/XL/XXL</p>
-              </li>
-              <img class="buynow" src="images/buyNow.png">
-            </ul>
-          </section>
-
-        </section>
-
-<!-- SECTION CAMISETAS BLOQUE 2 -->
-        
-        <section class="camisetasbloque">
-
-          <section class="camisetas">
-            <ul class="bordeimg">
-              <img class="images" src="images/mustard.png">
-              <li>
-                <a class="textimg" href="">Hot pink Pocket Tee</a>
-                <p>$4.99</p>
-                <p>Sizes: S/M/L/XL/XXL</p>
-              </li>
-              <img class="buynow" src="images/buyNow.png">
-            </ul>
-          </section>
-
-          <section class="camisetas">
-            <ul class="bordeimg">
-              <img class="images" src="images/mint.png">
-              <li>
-                <a class="textimg" href="">Hot pink Pocket Tee</a>
-                <p>$4.99</p>
-                <p>Sizes: S/M/L/XL/XXL</p>
-              </li>
-              <img class="buynow" src="images/buyNow.png">
-            </ul>
-          </section>
-
-        </section>
-
         <article>
           <b><h3 class="h3_principal">More Information About Our Awesome Tees</h3></b><br>
 
@@ -161,8 +100,9 @@
 
 <!-- FOOTER -->
 
-    <footer>
-    <p class="footer">© 2018 <a href = "yoursite.com">yoursite.com</a></p>
+    <footer class="footer">
+      <p class="footer_text1">Valid html5, css3, design and code by Rafa Galván Calvo</p>
+      <p class="footer_text2">© 2016 Fresh Ideas</p>
     </footer>
 
   </body>
