--- a/freshIdeas/index.html
+++ b/freshIdeas/index.html
@@ -10,6 +10,7 @@
   <body>
 
 <!--MENU TOPHEADER -->
+<header>
 
     <nav class="topheader">
 
@@ -19,7 +20,7 @@
         <li class="listenlaces"><a class="enlaces" href = ""><b>Home</b></a></li>
         <li class="listenlaces"><a class="enlaces" href = ""><b>About Us</b></a></li>
         <li class="listenlaces"><a class="enlaces" href = ""><b>Services</b></a></li>
-        <li class="listenlaces"><a class="enlaces" href = ""><b>Porfolio</b></a></li>
+        <li class="listenlaces"><a class="enlaces" href = ""><b>Porfolio</b></a></li> 
         <li class="listenlaces"><a class="enlaces" href = ""><b>News</b></a></li>
         <li class="listenlaces"><a class="enlaces" href = ""><b>Contact</b></a></li></ul>
       </ul>
@@ -27,7 +28,7 @@
 
 <!-- ENCABEZADO -->
 
-    <header class="header1">
+    <section class="header1">
 
       <h3>Tee Central - Home of the Cheap Cheap Tees</h3><br>
 
@@ -37,7 +38,9 @@
         taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in
         libero. Sed dignissim lacinia nunc</p>
 
-    </header>
+    </section>
+
+</header>
 
     <main>
 
