--- a/freshIdeas/index.html
+++ b/freshIdeas/index.html
@@ -32,14 +32,14 @@
   <!-- ENCABEZADO -->
 
       <section class="header1">
-          <article>
+          <article class="article_header">
               <h1>We Serve Fresh Ideas</h1>
               <p>
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
               Donec molestie. Sed aliquam sem ut arcu. Phasellus sollicitudin.</p>
               <a href="">Read more about our fresh ideas</a>
           </article>
-          <img src="images/banner.png" alt="banner">
+          <img src="images/banner.png" class="banner" alt="banner">
       </section>
 
   </header>
@@ -128,8 +128,8 @@
 <!-- FOOTER -->
 
     <footer class="footer">
-      <small>Valid html5, css3, design and code by Rafa Galván Calvo</small>
-      <small>&copy;2016 Fresh Ideas</small>
+      <small class="footer_text1">Valid html5, css3, design and code by Rafa Galván Calvo</small>
+      <small class="footer_text2">&copy; 2016 Fresh Ideas</small>
     </footer>
 
   </body>
