--- a/Lenguaje de Marcas/Pagina Web/index.html
+++ b/Lenguaje de Marcas/Pagina Web/index.html
@@ -14,20 +14,25 @@
     <div id="mostrar" class="container">
       <div class="fondo"></div>
       <div class="contenido">
-      <form class="form-container">
-        <h1>Iniciar sesión</h1>
-        <div class="form-group">
-          <label for="email">Correo electrónico</label>
-          <input type="email" id="email" name="email" required>
-        </div>
-        <div class="form-group">
-          <label for="password">Contraseña</label>
-          <input type="password" id="password" name="password" required>
-        </div>
-        <button class="submit-btn" type="submit">Iniciar sesión</button>
-        <a id="cerrar" class="cerrar" href="#">Cerrar</a>
-      </form>
-    </div>
+        <form class="form-container">
+          <h1>Iniciar sesión</h1>
+          <div class="form-group">
+            <label for="password">Nombre y Apellidos</label>
+            <input type="name" required>
+          </div>
+          <div class="form-group">
+            <label for="email">Correo electrónico</label>
+            <input type="email" id="email" name="email" required>
+          </div>
+          <div class="form-group">
+            <label for="password">Contraseña</label>
+            <input type="password" id="password" name="password" required>
+          </div>
+          <button class="submit-btn" type="submit">Iniciar sesión</button>
+          <button id="registro" class="registrarse" type="submit">Registrarse</button>
+          <a id="cerrar" class="cerrar" href="#">Cerrar</a>
+        </form>
+      </div>
     </div>
 
     <!--MENU TOPHEADER -->
@@ -83,7 +88,7 @@
           <b>
           <h1 class = "mensaje">Where Fitness <br> Becomes Your <br> Lifestyle</h1>
           </b>
-          <a href="clases.html"><button id="filtrar" class="boton" type="button" >Reservar</button></a>
+          <a href="clases.html"><button class="boton" type="button" >Reservar</button></a>
         </section>
       </header>
 
