--- a/Lenguaje de Marcas/Pagina Web/index.html
+++ b/Lenguaje de Marcas/Pagina Web/index.html
@@ -30,7 +30,7 @@
           </div>
           <button class="submit-btn" type="submit">Iniciar sesión</button>
           <button id="registro" class="registrarse" type="submit">Registrarse</button>
-          <a id="cerrar" class="cerrar" href="#">Cerrar</a>
+          <a id="cerrar" class="cerrar" href="#"><img class="X"></a>
         </form>
       </div>
     </div>
