--- a/Lenguaje de Marcas/Pagina Web/index.html
+++ b/Lenguaje de Marcas/Pagina Web/index.html
@@ -10,15 +10,35 @@
   </head>
 
   <body>
-    
+
     <div id="mostrar" class="container">
       <div class="fondo"></div>
       <div class="contenido">
         <form class="form-container">
           <h1>Iniciar sesión</h1>
           <div class="form-group">
-            <label for="password">Nombre y Apellidos</label>
-            <input type="name" required>
+            <label for="email">Correo electrónico</label>
+            <input type="email" id="email" name="email">
+          </div>
+          <div class="form-group">
+            <label for="password">Contraseña</label>
+            <input type="password" id="password" name="password">
+          </div>
+          <button class="submit-btn" type="submit">Iniciar sesión</button>
+          <a href="#registro" class="registrarse">Registrarse</a>
+          <a id="cerrar" class="cerrar" href="#"><img src="images/X.png" class="X" id="X"></a>
+        </form>
+      </div>
+    </div>
+    
+    <div id="registro" class="container">
+      <div class="fondo"></div>
+      <div class="contenido">
+        <form class="form-container">
+          <h1>Registrarse</h1>
+          <div class="form-group">
+            <label for="nombre">Nombre</label>
+            <input type="text" id="nombre" name="nombre" required>
           </div>
           <div class="form-group">
             <label for="email">Correo electrónico</label>
@@ -28,12 +48,11 @@
             <label for="password">Contraseña</label>
             <input type="password" id="password" name="password" required>
           </div>
-          <button class="submit-btn" type="submit">Iniciar sesión</button>
-          <button id="registro" class="registrarse" type="submit">Registrarse</button>
-          <a id="cerrar" class="cerrar" href="#"><img class="X"></a>
+          <button class="submit-btn" type="submit">Registrarse</button>
+          <a id="cerrar" class="cerrar" href="#"><img src="images/X.png" class="X" id="X"></a>
         </form>
       </div>
-    </div>
+    </div> 
 
     <!--MENU TOPHEADER -->
 
