--- a/Lenguaje de Marcas/Pagina Web/index.html
+++ b/Lenguaje de Marcas/Pagina Web/index.html
@@ -26,7 +26,7 @@
           </div>
           <button class="submit-btn" type="submit">Iniciar sesión</button>
           <a href="#registro" class="registrarse">Registrarse</a>
-          <a id="cerrar" class="cerrar" href="#"><img src="images/X.png" class="X" id="X"></a>
+          <a id="cerrar" class="cerrar" href="#"><img src="images/X-purple.png" class="X" id="X"></a>
         </form>
       </div>
     </div>
@@ -49,7 +49,7 @@
             <input type="password" id="password" name="password" required>
           </div>
           <button class="submit-btn" type="submit">Registrarse</button>
-          <a id="cerrar" class="cerrar" href="#"><img src="images/X.png" class="X" id="X"></a>
+          <a id="cerrar" class="cerrar" href="#"><img src="images/X-purple.png" class="X" id="X"></a>
         </form>
       </div>
     </div> 
