--- a/Lenguaje de Marcas/Pagina Web/planes.html
+++ b/Lenguaje de Marcas/Pagina Web/planes.html
@@ -11,9 +11,9 @@
 
   <body>
 
-    <!--FORMULARIO INICIO SESION -->
+     <!--FORMULARIO INICIO SESION -->
 
-    <div id="mostrar" class="container">
+     <div id="mostrar" class="container">
       <div class="fondo"></div>
       <div class="contenido">
         <form class="form-container">
@@ -27,7 +27,7 @@
             <input type="password" id="password" name="password">
           </div>
           <button class="submit-btn" type="submit">Iniciar sesión</button>
-          <a href="#registro" class="registrarse">Registrarse</a>
+          <p class="cuenta_p">¿No tienes cuenta?  <a href="#registro" class="registrarse">Registrarse</a></p>
           <a id="cerrar" class="cerrar" href="#"><img src="images/X-purple.png" class="X" id="X"></a>
         </form>
       </div>
@@ -51,6 +51,7 @@
             <input type="password" id="password" name="password" required>
           </div>
           <button class="submit-btn" type="submit">Registrarse</button>
+          <p class="cuenta_p">¿Tienes cuenta? <a href="#mostrar" class="registrarse">Iniciar Sesion</a></p>
           <a id="cerrar" class="cerrar" href="#"><img src="images/X-purple.png" class="X" id="X"></a>
         </form>
       </div>
