--- a/Lenguaje de Marcas/Pagina Web/planes.html
+++ b/Lenguaje de Marcas/Pagina Web/planes.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Home | Massfitness</title>
     <link rel="shortcut icon" href="images/massfitness.png"/>
-    <link rel="stylesheet" href="estilos2.css">
+    <link rel="stylesheet" href="css/estilos2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
   </head>
 
