--- a/Lenguaje de Marcas/Pagina Web/clases.html
+++ b/Lenguaje de Marcas/Pagina Web/clases.html
@@ -20,11 +20,11 @@
         <h1>Iniciar sesión</h1>
         <div class="form-group">
           <label for="email">Correo electrónico</label>
-          <input type="email" id="email" name="email">
+          <input type="email" id="email" name="email" autocomplete="off">
         </div>
         <div class="form-group">
           <label for="password">Contraseña</label>
-          <input type="password" id="password" name="password">
+          <input type="password" id="password" name="password" autocomplete="off">
         </div>
         <button class="submit-btn" type="submit">Iniciar sesión</button>
         <p class="cuenta_p">¿No tienes cuenta?  <a href="#registro" class="registrarse">Registrarse</a></p>
@@ -40,22 +40,22 @@
         <h1>Registrarse</h1>
         <div class="form-group">
           <label for="nombre">Nombre</label>
-          <input type="text" id="nombre" name="nombre" required>
+          <input type="text" id="nombre" name="nombre" autocomplete="off" required>
         </div>
         <div class="form-group">
           <label for="email">Correo electrónico</label>
-          <input type="email" id="email" name="email" required>
+          <input type="email" id="email" name="email" autocomplete="off" required>
         </div>
         <div class="form-group">
           <label for="password">Contraseña</label>
-          <input type="password" id="password" name="password" required>
+          <input type="password" id="password" name="password" autocomplete="off" required>
         </div>
         <button class="submit-btn" type="submit">Registrarse</button>
         <p class="cuenta_p">¿Tienes cuenta? <a href="#mostrar" class="registrarse">Iniciar Sesion</a></p>
         <a id="cerrar" class="cerrar" href="#"><img src="images/X-purple.png" class="X" id="X"></a>
       </form>
     </div>
-  </div> 
+  </div>  
 
   <!--MENU TOPHEADER -->
 
