--- a/Lenguaje de Marcas/Pagina Web/index.html
+++ b/Lenguaje de Marcas/Pagina Web/index.html
@@ -20,11 +20,11 @@
           <h1>Iniciar sesión</h1>
           <div class="form-group">
             <label for="email">Correo electrónico</label>
-            <input type="email" id="email" name="email" autocomplete="off" >
+            <input type="email" id="email" name="email" autocomplete="off" required>
           </div>
           <div class="form-group">
             <label for="password">Contraseña</label>
-            <input type="password" id="password" name="password" autocomplete="off">
+            <input type="password" id="password" name="password" autocomplete="off" pattern="" required>
           </div>
           <button class="submit-btn" type="submit">Iniciar sesión</button>
           <p class="cuenta_p">¿No tienes cuenta?  <a href="#registro" class="registrarse">Registrarse</a></p>
@@ -48,7 +48,7 @@
           </div>
           <div class="form-group">
             <label for="password">Contraseña</label>
-            <input type="password" id="password" name="password" autocomplete="off" required>
+            <input type="password" id="password" name="password" autocomplete="off" pattern="" required>
           </div>
           <button class="submit-btn" type="submit">Registrarse</button>
           <p class="cuenta_p">¿Tienes cuenta? <a href="#mostrar" class="registrarse">Iniciar Sesion</a></p>
