--- a/Lenguaje de Marcas/Pagina Web/sobre.html
+++ b/Lenguaje de Marcas/Pagina Web/sobre.html
@@ -123,7 +123,7 @@
         <article class="infoarticle">
         <h1 class="tituloinfo">Sobre <br> MassFitness</h1><br>
 
-        <p>I'm a paragraph. Click here to add your own text and edit me. It's easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. I'm a great place for you to tell a story and let your users know a little more about you.</p>
+        <p>Bienvenido a MassFitness, el gimnasio moderno y tecnológicamente avanzado que te ayudará a alcanzar tus metas de fitness. Ofrecemos una amplia variedad de servicios, desde entrenamiento personalizado hasta clases de grupo y equipos de última generación. Además, nuestra ambición es convertirnos en un referente nacional en el mundo del fitness.</p>
         </article>
 
     </section>
@@ -135,7 +135,13 @@
         <article class="infoarticle2">
         <b><h1 class="tituloinfo2">Sobre <br> MassFitness</h1></b><br>
 
-        <p>I'm a paragraph. Click here to add your own text and edit me. It's easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. I'm a great place for you to tell a story and let your users know a little more about you.</p>
+        <p>En MassFitness, creemos que el fitness es un camino hacia el bienestar y la felicidad. Por eso, nos comprometemos a ofrecerte un ambiente cómodo y acogedor, donde puedas entrenar con seguridad y confianza.</p>
+        <br>
+        <p>Nuestro equipo de entrenadores profesionales está altamente capacitado y comprometido para ayudarte a alcanzar tus objetivos de manera efectiva y personalizada. Además, nuestras instalaciones están equipadas con tecnología de última generación para que puedas tener la mejor experiencia de entrenamiento.</p>
+        <br>
+        <p>En MassFitness, creemos que todos merecen una oportunidad para mejorar su salud y su calidad de vida. Por eso, ofrecemos una amplia variedad de opciones de membresía para que puedas encontrar la que mejor se adapte a tus necesidades y presupuesto.</p>
+        <br>
+        <p>No importa si eres un principiante o un atleta experimentado, en MassFitness encontrarás todo lo que necesitas para alcanzar tus metas de fitness y convertirte en la mejor versión de ti mismo. ¡Únete a nuestra comunidad hoy mismo y comienza a mejorar tu vida!</p>
         </article>
 
         <section class="fotoinfo2"></section>
