--- a/Lenguaje de Marcas/Pagina Web/index.html
+++ b/Lenguaje de Marcas/Pagina Web/index.html
@@ -136,7 +136,7 @@
           <article class="infoarticle">
           <h1 class="tituloinfo">Sobre <br> MassFitness</h1><br>
 
-          <p>I'm a paragraph. Click here to add your own text and edit me. It's easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. I'm a great place for you to tell a story and let your users know a little more about you.</p>
+          <p>Bienvenido a MassFitness, el gimnasio moderno y tecnológicamente avanzado que te ayudará a alcanzar tus metas de fitness. Ofrecemos una amplia variedad de servicios, desde entrenamiento personalizado hasta clases de grupo y equipos de última generación. Además, nuestra ambición es convertirnos en un referente nacional en el mundo del fitness.</p>
           <a href="sobre.html"><button class="botonsobre" type="button" >Leer Más</button></a>
           </article>
 
@@ -169,9 +169,9 @@
 
     <section class="contacto" id="contacto">
       <b><p>Puedes contactarnos aqui:</p></b><br>
-      <p>500 Terry Francois Street</p>
-      <p>Francisco, CA 94158</p>
-      <p>Email: info@mysite.com</p>
+      <p>Calle Rueda, 37</p>
+      <p>Malaga, Benalmadena, 29631</p>
+      <p>Email: massfitness@gmail.com</p>
       <p>Tel: 123-456-7890   |    Fax: 123-456-7890</p>
     </section>
 
