--- a/Lenguaje de Marcas/Pagina Web/index.html
+++ b/Lenguaje de Marcas/Pagina Web/index.html
@@ -25,8 +25,8 @@
           <div class="form-group">
             <label for="password">Contraseña</label>
             <input type="password" id="password" name="password" autocomplete="off" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[#$@!%&*?_])(?!\s)[a-zA-Z\d#$@!%&*?_]{8,16}$" required>
-          </div>
-          <button class="submit-btn" type="submit">Iniciar sesión</button>
+          </div>     
+          <button class="submit-btn" type="submit" id="submit-btn">Iniciar sesión</button>
           <p class="cuenta_p">¿No tienes cuenta?  <a href="#registro" class="registrarse">Registrarse</a></p>
           <a id="cerrar" class="cerrar" href="#"><img src="images/X-purple.png" class="X1" id="X1"></a>
         </form>
@@ -54,6 +54,10 @@
             <label for="password2">Contraseña</label>
             <input type="password" id="password2" name="password2" autocomplete="off" pattern="(?=.*[a-z])(?=.*[a-z])(?=.*\d)(?=.*[#$@!%&*?_])(?!\s)[a-zA-Z\d#$@!%&*?_]{8,16}$" required>
           </div>
+          <div class="form-group">
+            <label for="confirm-password">Confirmar contraseña</label>
+            <input type="password" id="confirm-password" name="confirm-password" autocomplete="off" pattern="(?=.*[a-z])(?=.*[a-z])(?=.*\d)(?=.*[#$@!%&*?_])(?!\s)[a-zA-Z\d#$@!%&*?_]{8,16}$" required>
+          </div>
           <div id="error_message">
             <p class="message"><img class="X2" src="images/X.png" alt="X2" id="length-icon">La contraseña debe tener entre 8 y 16 caracteres</p>
             <p class="message"><img class="X2" src="images/X.png" alt="X2" id="lowercase-icon">La contraseña debe contener al menos una letra minúscula</p>
@@ -61,7 +65,11 @@
             <p class="message"><img class="X2" src="images/X.png" alt="X2" id="number-icon">La contraseña debe contener al menos un número</p>
             <p class="message"><img class="X2" src="images/X.png" alt="X2" id="special-char-icon">La contraseña debe contener al menos un carácter especial (#$@!%&amp;*?_)</p>
           </div>
-          <button class="submit-btn" type="submit">Registrarse</button>
+          <div class="form-group-politica">
+            <input type="checkbox" id="politica-privacidad" name="politica-privacidad" required>
+            <label for="politica-privacidad">He leído y acepto la política de privacidad</label>
+          </div>     
+          <button class="submit-btn" type="submit" id="submit-btn">Registrarse</button>
           <p class="cuenta_p">¿Tienes cuenta? <a href="#mostrar" class="registrarse">Iniciar Sesion</a></p>
           <a id="cerrar" class="cerrar" href="#"><img src="images/X-purple.png" class="X1" id="X1"></a>
         </form>
@@ -169,10 +177,11 @@
 
     <section class="contacto" id="contacto">
       <b><p>Puedes contactarnos aqui:</p></b><br>
-      <p>Calle Rueda, 37</p>
-      <p>Malaga, Benalmadena, 29631</p>
-      <p>Email: massfitness@gmail.com</p>
-      <p>Tel: 123-456-7890   |    Fax: 123-456-7890</p>
+      <p class="p_contacto">Calle Rueda, 37</p>
+      <p class="p_contacto">Malaga, Benalmadena, 29631</p>
+      <p class="p_contacto">Email: massfitness@gmail.com</p>
+      <p class="p_contacto">Tel: 123-456-7890   |    Fax: 123-456-7890</p>
+      <p class="p_contacto"><a href=https://twitter.com/massfitness><img src="images/twitter.png" width = 50 height = 25 /></a><a href=https://es-es.facebook.com/massfitness><img src="images/facebook.png" width = 25 height = 25 /></a></p>
     </section>
 
     <!-- FOOTER -->
